Implement local storage persistence and management for custom .http tests
Co-authored-by: Junie <junie@jetbrains.com>