@@ -8,7 +8,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api")
@@ -27,10 +26,12 @@ public class RestTestApi {
             // Fallback for JAR execution or if src/main/resources is not available as a filesystem path
              return List.of("cardealer");
         }
-        return Files.list(path)
-                .filter(p -> p.toString().endsWith(".http"))
-                .map(p -> p.getFileName().toString().replace(".http", ""))
-                .collect(Collectors.toList());
+        try (var stream = Files.list(path)) {
+            return stream
+                    .filter(p -> p.toString().endsWith(".http"))
+                    .map(p -> p.getFileName().toString().replace(".http", ""))
+                    .toList();
+        }
     }
 
     @GetMapping(path = "runtest/{testName}", produces = "text/markdown; charset=UTF-8")
